--- a/modules/testportlet/build.gradle
+++ b/modules/testportlet/build.gradle
@@ -6,6 +6,6 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 
 	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
-	compileOnly project(":modules:servicebuilder:servicebuilder-api")
+	//compileOnly project(":modules:servicebuilder:servicebuilder-api")
     compileOnly 'javax.portlet:portlet-api'
 }
